--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.22.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "framer-motion": "^12.26.2",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.1",
